# ui-story

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: docker-build.yml
config/: settings.py  urls.py
screenshots/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
screenshots/management/commands/: create_token.py
screenshots/migrations/: 0001_initial.py
screenshots/templates/screenshots/: base.html  branch_detail.html  project_detail.html  project_list.html  screenshot_comparison.html
